# Captain-Cool

./: .env.example  .gitignore  AI_STUDIO_PROMPT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  devto_blog.md  main.py  pyproject.toml  requirements.txt
.antigravity/: INDEX.md  README.md  commit-history.md
.antigravity/agent-traces/: agent-prompts.md  debate-orchestration.md  session-2026-05-17.md  session-log.md  tool-calls.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
adk_agents/captain_cool/: __init__.py  agent.py
docs/: API_REFERENCE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  EVALUATION.md  QUALITY_CHECKLIST.md  architecture.md
frontend/: history.html  index.html  insights.html
scripts/: start.py
src/: __init__.py
src/api/: matches.py  strategize.py
src/core/: config.py
src/models/: schemas.py
src/services/: agents.py  cricket_api.py
src/tests/: test_cricket_api.py  test_health.py  test_strategize.py
